name:                refproject
version:             0.0.0.1
build-type:          Simple
cabal-version:       2.0

executable refproject
  main-is:             src/Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , Cabal == 3.2.0.0
		                 , gitlib
            		     , gitlib-libgit2
